Version: 1.0.3
Date: ????
  Major Features:
    - Added a technology that unlocks more advanced uses of the reprocessor on other planets
    - Added a production chain on Vulcanus for separating lava into molten metals that uses notably less calcite
    - Added a complex production chain for efficiently quality upcycling holmium, tungsten, and uranium on Gleba (yes, Gleba)
  Changes:
    - Renamed scrap reprocessor to just reprocessor (mod name unchanged)
    - Increased the reprocessor's innate quality from 5% to 10%
    - Basic scrap reprocessing recipes are now Fulgora-specific, to keep that planet relevant after unlocking advanced recipes
    - Adjusting scrap reprocessing so that step one gives less slurry and step two gives more, to encourage full production chains
    - This also means that scrap reprocessing is only water neutral if the full chain is used, otherwise it will lose water
    - Mineral slurry can now be barrelled, to facilitate advanced reprocessor recipes that require interplanetary logistics
  Bugfixes:
    - Mineral slurry separation is no longer allowed to be used to calculate recipe costs in the crafting menu
  Modding:
    - Reprocessor output loaders now include spoil results in their filters, to account for recipes with spoilage
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024-12-10
  Bugfixes:
    - Fixed an issue that could cause a crash if multiple reprocessors were marked for deconstruction at once
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-11-21
  Bugfixes:
    - Fixed folder capitalization issue that prevented the mod from loading
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024-11-20
  Major Features:
    - Initial release.